# reabbit_learning

./: .env  docker-compose.yml  main.py  pyproject.toml  settings.py
api/: routers.py
brokers/: rabbit_broker.py  tasks.py
